server/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-backend
  template:
    metadata:
      labels:
        app: portfolio-backend
    spec:
      containers:
        - name: backend
          image: 779846782668.dkr.ecr.us-east-2.amazonaws.com/portfolio-backend:latest
          ports:
            - containerPort: 8080
