server/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend-service
spec:
  selector:
    app: portfolio-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
